Fix expand/collapse button not clicking

--- a/src/components/ui/CollapsableEdgeElement/style.module.css
+++ b/src/components/ui/CollapsableEdgeElement/style.module.css
@@ -51,6 +51,7 @@
     left: 100%;
     top: 50%;
     translate: 0 -50%;
+    z-index: 1;
 }
 .collapsable-edge-element-left-collapsed {
     composes: collapsable-edge-element-horizontally-collapsed collapsable-edge-element-left;
@@ -63,6 +64,7 @@
     right: 100%;
     top: 50%;
     translate: 0 -50%;
+    z-index: 1;
 }
 .collapsable-edge-element-right-collapsed {
     composes: collapsable-edge-element-horizontally-collapsed collapsable-edge-element-right;
@@ -75,6 +77,7 @@
     top: 100%;
     left: 50%;
     translate: -50% 0;
+    z-index: 1;
 }
 .collapsable-edge-element-top-collapsed {
     composes: collapsable-edge-element-vertically-collapsed collapsable-edge-element-top;
@@ -88,6 +91,7 @@
     bottom: 100%;
     left: 50%;
     translate: -50% 0;
+    z-index: 1;
 }
 .collapsable-edge-element-bottom-collapsed {
     composes: collapsable-edge-element-vertically-collapsed collapsable-edge-element-bottom;
@@ -114,9 +118,13 @@
         z-index: 4;
     }
     .collapsable-edge-element-left-expanded .expand-collapse-button-container {
-        flex-direction: column;
-        align-items: flex-start;
         height: 100%;
+    }
+    .collapsable-edge-element-left-expanded .expand-collapse-button-container div {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        justify-content: center;
     }
     .collapsable-edge-element-left-expanded .expand-collapse-button-container button {
         height: 100%;
@@ -129,6 +137,15 @@
     .collapsable-edge-element-right-expanded .expand-collapse-button-container {
         flex-direction: column;
         align-items: flex-end;
+        height: 100%;
+    }
+    .collapsable-edge-element-right-expanded .expand-collapse-button-container div {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        justify-content: center;
+    }
+    .collapsable-edge-element-right-expanded .expand-collapse-button-container button {
         height: 100%;
     }
     .collapsable-edge-element-top-expanded {
